# frappe-theme-editor-v2

./: .gitignore  MANIFEST.in  NEUTRAL-PICKER-CODE.txt  README.md  license.txt  package.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deploy.yml
docs V2/: frappe_v15_css_variables_light_and_dark.csv  tailwind_style_catalog.csv  tailwind_style_catalog_for_dummies.csv
frappe_theme_editor/: __init__.py  boot.py  hooks.py  install.py  modules.txt
frappe_theme_editor/config/: __init__.py  desktop.py
frappe_theme_editor/desktop_icon/: theme_editor.json
frappe_theme_editor/frappe_theme_editor/doctype/theme/: theme.json  theme.py
frappe_theme_editor/frappe_theme_editor/doctype/theme_selector/: theme_selector.js  theme_selector.json  theme_selector.py
frappe_theme_editor/frappe_theme_editor/page/theme_editor/: theme_editor.html  theme_editor.js  theme_editor.json
frappe_theme_editor/frappe_theme_editor/page/theme_preview/: theme_preview.js  theme_preview.json
frappe_theme_editor/frappe_theme_editor/workspace/frappe_theme_editor/: frappe_theme_editor.json
frappe_theme_editor/frappe_theme_editor/workspace/theme_management/: theme_management.json
frappe_theme_editor/public/: theme-editor-standalone.html  theme-editor.html
frappe_theme_editor/public/css/: nce_theme.css
frappe_theme_editor/public/js/: nce_theme_boot.js  theme_editor.js  theme_preview.bundle.js
frappe_theme_editor/themes/: default-theme.json
frappe_theme_editor/www/: theme-editor.html
scripts/: sync_frappe_defaults.js
themes/: default-theme.json
(+7 files in other folders)
