[project]
name = "frappe_theme_editor"
authors = [
    { name = "NCE", email = "dev@ncesoccer.com" }
]
description = "Visual theme editor for Frappe/ERPNext applications"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0"
